- Clarified purpose of game in page description. - Reduced size of Fox image to reduce redundancy. - Implemented right side of stage practice (pretty hacky but it works). - Implemented stage side selection: can choose which sides of stage to practice. - Fixed angles not deadzoning at pi/2 (added a little redundancy as a result). - Modified ingame text to improve visibility and style, may rework this again. - Added option to only show ingame angles after an attempt. - Implemented option to disable cardinal challenge angles. - Implemented option to force realistic reaction for inputs.

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h3, h4 {
 	height: 100%;
 	border-right: 1px dashed #888888;
 	border-top: 1px solid #ffffff; /*Border-right displacement fix*/
-	width: 300px;
+	width: 350px;
 	padding: 0;
 	margin: 0;
 	margin-left: 5px;
